--- a/src/ui/settings/profile/avatar/Scale.css
+++ b/src/ui/settings/profile/avatar/Scale.css
@@ -2,16 +2,15 @@
     display: flex;
     width: 100%;
     height: 1.5em;
-    align-items: self-end;
+    align-items: flex-start;
 }
 
 .scale BUTTON {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0 .25em;
+    margin: 0 .5em;
+    border-radius: .25em;
 }
 
 .scale INPUT {
-    margin-left: 0.25em;
-    margin-right: 0.25em;
     flex: auto;
 }
