--- a/src/ui/settings/profile/avatar/AvatarEditor.css
+++ b/src/ui/settings/profile/avatar/AvatarEditor.css
@@ -4,6 +4,8 @@
     width: min-content;
     margin-bottom: .7rem;
     padding: .5rem;
+
+    --bs-popover-border-width: 1px;
 }
 
 .avatar-editor .icon {
