--- a/src/ui/lightbox/LightBox.css
+++ b/src/ui/lightbox/LightBox.css
@@ -17,6 +17,9 @@
 
 .lightbox-download {
     padding: 1px 0 1px 10px;
+    position: relative;
+    top: -.1em;
+    left: -.25em;
 }
 
 @media only screen and (min-width: 992px) {
