--- a/src/ui/control/Avatar.css
+++ b/src/ui/control/Avatar.css
@@ -5,3 +5,11 @@
 .avatar-square {
     border-radius: 10px;
 }
+
+.avatar-placeholder {
+    background-color: #fecba1;
+    color: #ca6510;
+    font-weight: 400;
+    display: grid;
+    place-items: center;
+}
