Home profile pages on Mobile should display the main menu and highlight the corresponding icon in the bottom menu. This makes the bottom menu items work more like tabs.

--- a/src/ui/feed/FeedGotoButton.css
+++ b/src/ui/feed/FeedGotoButton.css
@@ -9,6 +9,10 @@
     position: relative;
 }
 
+.feed-goto-button .goto {
+    white-space: nowrap;
+}
+
 .feed-goto-button .goto svg {
     vertical-align: -.5em;
 }
