--- a/src/ui/mainmenu/BottomMenu.css
+++ b/src/ui/mainmenu/BottomMenu.css
@@ -40,6 +40,10 @@
     color: white;
 }
 
+#bottom-menu .item .icon.active .avatar {
+    filter: brightness(140%);
+}
+
 #bottom-menu .item .icon.bell, #bottom-menu .item .icon.news {
     position: relative;
 }
