--- a/src/ui/feed/FeedPage.css
+++ b/src/ui/feed/FeedPage.css
@@ -8,11 +8,5 @@
 }
 
 .feed-after-end {
-    height: 1rem;
-}
-
-@media only screen and (max-width: 991px) {
-    .feed-after-end {
-        height: 4rem;
-    }
+    height: calc(var(--page-footer-height) + 1rem);
 }
