--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -42,15 +42,7 @@
         margin-top: 1rem;
         margin-bottom: -.25rem;
         border-top: 1px solid var(--bs-gray-100);
-        display: flex;
-        justify-content: space-between;
-    }
-}
-
-@media only screen and (max-width: 991px) {
-    #instants > .footer {
-        padding: .25rem .75rem 0;
-        margin-bottom: .3rem;
+        text-align: right;
     }
 }
 
