--- a/src/ui/instant/InstantsPage.css
+++ b/src/ui/instant/InstantsPage.css
@@ -5,6 +5,16 @@
     }
 }
 
+@media only screen and (min-width: 992px) {
+    .instants-page #back-box {
+        padding-top: 1rem;
+    }
+
+    .instants-page #back-box .desktop-back {
+        margin-top: 0;
+    }
+}
+
 .instants-page #instants > .content {
     max-width: unset;
     max-height: unset;
