--- a/src/ui/mainmenu/DesktopMainMenu.css
+++ b/src/ui/mainmenu/DesktopMainMenu.css
@@ -8,11 +8,15 @@
 
 @media only screen and (min-width: 992px) {
     #main-menu {
+        height: 4.25rem;
+    }
+
+    #main-menu.transparent {
         height: calc(4.25rem - 1px);
         border-bottom: 1px solid var(--body-bg);
     }
 
-    #main-menu.transparent {
+    #main-menu.transparent.scrolled {
         background-color: rgb(255 255 255 / 90%);
         border-bottom-color: var(--bs-gray-300);
         backdrop-filter: blur(3px);
