--- a/src/ui/connectdialog/ConnectPage.css
+++ b/src/ui/connectdialog/ConnectPage.css
@@ -28,10 +28,23 @@
     margin-bottom: 2rem;
 }
 
+.connect-page .form-error {
+    margin-top: 1rem;
+    width: 100%;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 150%;
+    color: var(--bs-form-invalid-color);
+}
+
 .connect-page .submit-button {
     margin-top: 2rem;
     display: block;
     width: 100%;
+}
+
+.connect-page .form-error ~ .submit-button {
+    margin-top: 1.5rem;
 }
 
 .connect-page .link {
