--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -19,8 +19,12 @@
     background-color: var(--brand-50);
 }
 
-#instants .instant:hover, #instants .instant.unread:hover {
+#instants .instant:hover {
     background-color: var(--bs-gray-100);
+}
+
+#instants .instant.unread:hover {
+    background-color: var(--bs-brand-100);
 }
 
 #instants .instant A.outer {
