Added a tooltip to Blog Name input explaining what names are allowed.

--- a/src/ui/signupdialog/DomainField.css
+++ b/src/ui/signupdialog/DomainField.css
@@ -12,11 +12,11 @@
     flex: none;
     display: block;
     margin-left: .2em;
-    font-family: var(--bs-font-monospace);
+    font-family: var(--bs-font-monospace) monospace;
 }
 
 .domain-field .domain-name {
-    font-family: var(--bs-font-monospace);
+    font-family: var(--bs-font-monospace) monospace;
 }
 
 .domain-field .domain-auto {
