--- a/src/ui/mainmenu/InvitationAlert.css
+++ b/src/ui/mainmenu/InvitationAlert.css
@@ -19,7 +19,7 @@
     #invitation-alert {
         position: sticky;
         top: calc(var(--page-header-height) - 3.5rem);
-        z-index: var(--zindex-page-header);
+        z-index: var(--zindex-invitation-alert);
     }
 }
 
