Memoization error in StartReadingPage fixed. Visual improvements.

--- a/src/ui/explore/StartReadingPage.css
+++ b/src/ui/explore/StartReadingPage.css
@@ -8,6 +8,10 @@
     text-align: start;
 }
 
+.start-reading-page .person {
+    margin-bottom: 1rem;
+}
+
 .start-reading-page .person .blog-title {
     grid-area: status;
 }
