Show Explore in the MainMenuSidebar and SandwichMenu when the user is not signed in. Visual improvements in SandwichMenu.

--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -39,7 +39,7 @@ $popover-border-radius:       1rem;
 
 $offcanvas-padding-y:         .75rem;
 $offcanvas-padding-x:         .75rem;
-$offcanvas-horizontal-width:  90vw;
+$offcanvas-horizontal-width:  20rem;
 $offcanvas-border-color:      white;
 
 @import "~bootstrap/scss/maps";
