Even more compact node cards on narrow mobile screens.

--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -2,7 +2,13 @@
     padding: .25rem .25rem .5rem;
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 385px) {
+    .node-card {
+        width: 325px;
+    }
+}
+
+@media only screen and (min-width: 386px) and (max-width: 991px) {
     .node-card {
         width: 350px;
     }
