--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -14,6 +14,18 @@
     --font-messages: "Montserrat", var(--bs-font-sans-serif);
 }
 
+@media only screen and (min-width: 992px) {
+    :root:root {
+        --menu-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    :root:root {
+        --menu-shadow: 0 1px 0 0 var(--bs-gray-400);
+    }
+}
+
 HTML {
     font-size: 90%;
     height: 100%;
