--- a/src/ui/mainmenu/GlobalTitle.css
+++ b/src/ui/mainmenu/GlobalTitle.css
@@ -17,7 +17,7 @@
     }
 
     #global-title.shadow {
-        box-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
+        box-shadow: var(--menu-shadow);
         transition: box-shadow .2s ease;
     }
 }
