--- a/src/ui/page/BackBoxInner.css
+++ b/src/ui/page/BackBoxInner.css
@@ -5,7 +5,7 @@
 }
 
 .back-box-inner.back-box-shadow {
-    box-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
+    box-shadow: var(--menu-shadow);
     transition: box-shadow .2s ease;
 }
 
