--- a/src/ui/reactionsdialog/ReactionsDialog.css
+++ b/src/ui/reactionsdialog/ReactionsDialog.css
@@ -26,6 +26,7 @@
 
 .reactions-dialog .popover-body {
     padding: .75rem 1.5rem 1.5rem;
+    position: relative;
 }
 
 .reactions-dialog .underlined-tabs {
