box-shadow in .shadow CSS rule has !important attribute, so it overrides any other shadow that is defined.

--- a/src/ui/mainmenu/GlobalTitle.css
+++ b/src/ui/mainmenu/GlobalTitle.css
@@ -16,7 +16,7 @@
         transition: box-shadow .2s ease;
     }
 
-    #global-title.shadow {
+    #global-title.main-shadow {
         box-shadow: var(--menu-shadow);
         transition: box-shadow .2s ease;
     }
