Correct display of the shadow in focused input fields in Settings. Correct color of the shadow in focused NumberField and DurationField.

--- a/src/ui/control/field/DurationField.css
+++ b/src/ui/control/field/DurationField.css
@@ -1,7 +1,13 @@
 .duration-control {
     display: flex;
+    gap: .25rem;
 }
 
 .duration-control ~ .invalid-feedback {
     display: block;
+}
+
+.duration-control .rw-state-focus .rw-widget-picker {
+    border-color: var(--bs-primary);
+    box-shadow: 0 0 0 .25rem var(--bs-primary-bg-subtle);
 }
