--- a/src/ui/explore/ExplorePage.css
+++ b/src/ui/explore/ExplorePage.css
@@ -13,3 +13,46 @@
         top: calc(var(--page-header-height) + 3rem);
     }
 }
+
+.explore-page .trending-post {
+    margin-bottom: 1rem;
+    padding: .25rem .5rem .25rem .25rem;
+    display: grid;
+    gap: .25rem;
+    place-content: center start;
+    grid-template:
+        " avatar             owner   " calc(24px + .5rem)
+        " heading            heading " min-content
+        " counters           counters" min-content
+        / calc(24px + .5rem) auto;
+}
+
+.explore-page .trending-post .avatar {
+    grid-area: avatar;
+}
+
+.explore-page .trending-post .owner {
+    grid-area: owner;
+    color: var(--bs-gray-900);
+}
+
+.explore-page .trending-post .heading {
+    grid-area: heading;
+    color: var(--bs-gray-900);
+    line-height: 1.5;
+}
+
+.explore-page .trending-post .heading:hover {
+    text-decoration: underline;
+}
+
+.explore-page .trending-post .counters {
+    grid-area: counters;
+    margin-top: .15rem;
+    color: var(--bs-gray-600);
+    font-size: .88rem;
+}
+
+.explore-page .trending-post .counters SPAN + SPAN {
+    margin-inline-start: 1rem;
+}
