--- a/src/ui/explore/TrendingPost.css
+++ b/src/ui/explore/TrendingPost.css
@@ -1,5 +1,5 @@
 .trending-post {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     padding: .25rem .5rem .25rem .25rem;
     display: grid;
     gap: .25rem;
@@ -9,6 +9,12 @@
         " heading            heading " min-content
         " counters           counters" min-content
         / calc(24px + .5rem) auto;
+    font-size: 1rem;
+}
+
+.trending-post.small {
+    margin-bottom: 1rem;
+    font-size: .875rem;
 }
 
 .trending-post .avatar {
@@ -18,6 +24,7 @@
 .trending-post .owner {
     grid-area: owner;
     color: var(--bs-gray-900);
+    font-size: 1rem;
 }
 
 .trending-post .heading {
@@ -34,9 +41,9 @@
     grid-area: counters;
     margin-top: .15rem;
     color: var(--bs-gray-600);
-    font-size: .88rem;
+    font-size: .875em;
 }
 
 .trending-post .counters SPAN + SPAN {
-    margin-inline-start: 1rem;
+    margin-inline-start: 1em;
 }
