Allow horizontal scrolling in fundraisers navigation on smaller screens.

--- a/src/ui/donatedialog/DonateDialog.css
+++ b/src/ui/donatedialog/DonateDialog.css
@@ -20,6 +20,7 @@
 
 .donate-dialog .fundraisers .nav {
     flex: 1 0 10em;
+    overflow-x: auto;
 }
 
 .donate-dialog .fundraisers .nav .nav-link svg {
