New style of the selection in AvatarField. Reposition AvatarField popover after the list of avatars is loaded.

--- a/src/ui/control/field/AvatarField.css
+++ b/src/ui/control/field/AvatarField.css
@@ -41,7 +41,7 @@
 }
 
 .avatar-field .selector .item.active, .avatar-field .selector .item.active:hover {
-    background-color: var(--bs-cyan);
+    border: 2px solid var(--bs-primary);
     cursor: default;
 }
 
