Replace `goTo*` navigation actions with `goToLocation` - `goTo*` actions will be no more used directly. Add an action for gallery expansion in DetailedPosting.

--- a/src/ui/entry/EntryGallery.css
+++ b/src/ui/entry/EntryGallery.css
@@ -131,7 +131,8 @@
     opacity: 0;
     transition: opacity .15s ease-in-out;
     font-size: 1.3em;
-    display: block;
+    display: grid;
+    place-items: center;
     width: 1.75em;
     height: 1.75em;
     z-index: var(--zindex-text-overlay);
