On large screens, if tabs on PeoplePage are too wide, make the font size smaller.

--- a/src/ui/people/PeopleTabs.css
+++ b/src/ui/people/PeopleTabs.css
@@ -1,3 +1,7 @@
 .people-tabs.nav.nav-pills {
     --bs-nav-pills-border-radius: 2rem;
 }
+
+.people-tabs.nav.nav-pills.small-font {
+    --bs-nav-link-font-size: .9em;
+}
