--- a/src/ui/control/richtexteditor/visual/VisualTextArea.css
+++ b/src/ui/control/richtexteditor/visual/VisualTextArea.css
@@ -88,6 +88,7 @@
     line-height: 1.5;
     margin-top: .5em;
     color: var(--bs-secondary);
+    max-width: calc(var(--width) * 1.05);
 }
 
 .visual-text-area IMG {
