--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -75,6 +75,7 @@
     line-height: 1.5;
     margin-top: .5em;
     color: var(--bs-secondary);
+    max-width: calc(var(--width) * 1.05);
 }
 
 .posting > .content .read-more {
