--- a/src/ui/detailedposting/DetailedPostingPage.css
+++ b/src/ui/detailedposting/DetailedPostingPage.css
@@ -1,3 +1,13 @@
+.detailed-posting-page .feed-top-box {
+    top: calc(var(--page-header-height) + 4.5rem);
+}
+
+@media only screen and (max-width: 991px) {
+    .detailed-posting-page .feed-top-box {
+        top: calc(var(--page-header-height) + .5rem);
+    }
+}
+
 .posting-not-found {
     background-color: white;
     border-radius: 1rem;
