--- a/src/ui/control/Loading.css
+++ b/src/ui/control/Loading.css
@@ -6,6 +6,7 @@
     position: absolute;
     inset: 0;
     background-color: white;
+    border-radius: 1rem;
     opacity: .6;
     z-index: var(--zindex-overlay-loading);
     display: grid;
